--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/yup": "^0.32.0",
+    "classnames": "^2.3.2",
     "firebase": "^9.17.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
