--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.58.3",
     "swiper": "^9.1.0",
     "typescript": "^4.9.5",
+    "uid": "^2.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
