added scrolling for chat

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bookshelf",
   "version": "0.1.0",
-  "homepage": "https://holdenn1.github.io/bookShelf/",
+  "homepage": "https://holdenn1.github.io/bookShelf",
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
